--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <h2 data-key="lead_head">Leadership & Administration</h2>
                 <div class="card">
                     <h3 data-key="lead_chair_title">Chairman, Board of Directors</h3>
-                    <p data-key="lead_chair_desc">Served as the Chairman of B. P. Koirala Memorial Cancer Hospital (BPKMCH) since 2020, overseeing the hospital's strategic governance.</p>
+                    <p data-key="lead_chair_desc">Served as the Chairman of B. P. Koirala Memorial Cancer Hospital (BPKMCH) (2020-2023), overseeing the hospital's strategic governance.</p>
                 </div>
                 <div class="expert-grid">
                     <div class="expert-box">
@@ -636,4 +636,5 @@
         }
     </script>
 </body>
+
 </html>
