--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <div class="expert-grid">
                     <div class="expert-box">
                         <strong data-key="lead_deputy_title">Deputy Director</strong>
-                        <p data-key="lead_deputy_desc">Former Deputy Director of BPKMCH (2018–2020).</p>
+                        <p data-key="lead_deputy_desc">Former Deputy Director of BPKMCH(2018–2020).</p>
                     </div>
                     <div class="expert-box">
                         <strong data-key="lead_sci_title">Scientific Committee</strong>
@@ -385,9 +385,9 @@
             <div class="card">
                 <h3 style="margin-top:0;" data-key="edu_head">Education</h3>
                 <ul style="padding-left:20px; line-height: 1.8;">
-                    <li data-key="edu_1">M.Ch (Urology) - Kathmandu University.</li>
-                    <li data-key="edu_2">M.Med (Oncology) - Fudan University.</li>
-                    <li data-key="edu_3">MBBS - Shanghai Medical University.</li>
+                    <li data-key="edu_1">M.Ch (Urology) - Kathmandu University </li>
+                    <li data-key="edu_2">M.s. Surgical Oncology - Fudan University</li>
+                    <li data-key="edu_3">MBBS - Shanghai Medical University </li>
                 </ul>
             </div>
             
@@ -638,3 +638,4 @@
 </body>
 
 </html>
+
