--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <p style="margin-bottom:20px;" data-key="lead_intro">Dr. Lamichhane has held pivotal governance roles at BPKMCH, shaping the institution's strategic direction:</p>
                     
                     <div class="timeline-item">
-                        <span class="timeline-date" data-key="lead_1_date">2020 – Present</span>
+                        <span class="timeline-date" data-key="lead_1_date">2020 – 2023</span>
                         <span class="timeline-title" data-key="lead_1_role">Chairman, Board of Directors</span>
                         <span class="timeline-loc" data-key="lead_1_loc">B. P. Koirala Memorial Cancer Hospital (BPKMCH), Chitwan</span>
                     </div>
@@ -563,3 +563,4 @@
     </script>
 </body>
 </html>
+
