--- a/index.html
+++ b/index.html
@@ -228,9 +228,8 @@
             <section id="expertise">
                 <h2 class="section-head" data-key="sec_exp">Clinical Expertise</h2>
                 
-
-[Image of the human urinary system]
-
+                <img src="urinary.png" alt="Nephron Anatomy and Kidney Structure Diagram" style="width:100%; max-width:600px; height:auto; display:block; margin: 0 auto 20px auto; border: 1px solid #ddd; border-radius: 8px;">
+                
                 <div class="card">
                     <ul class="data-list">
                         <li data-key="exp_li1"><strong>Genito-Urinary Tract Tumors:</strong> Specialized in Bladder, Prostate, and Kidney cancers.</li>
@@ -563,4 +562,3 @@
     </script>
 </body>
 </html>
-
