--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             --text-grey: #555555;
             --shadow: 0 4px 6px rgba(0,0,0,0.1);
             
-            /* High Red Color Variable */
+            /* Colors */
             --high-red: #ff0000;
             --black: #000000;
             --footer-green: #2E7D32;
@@ -289,10 +289,17 @@
                 <h2 class="section-head" data-key="sec_cred">Credentials & Training</h2>
                 <div class="card">
                     <h3 style="margin-bottom:15px; color:var(--primary);" data-key="edu_title">Education</h3>
-                    <ul class="data-list">
+                    <ul class="data-list" style="margin-bottom: 30px;">
                         <li data-key="edu_li1"><strong>M.Ch (Magister Chirurgiae) in Urology:</strong> Kathmandu University, Nepal (2016).</li>
-                        <li data-key="edu_li2"><strong>M.S.Surgical Oncology):</strong> Fudan University, Shanghai, China (2001).</li>
+                        <li data-key="edu_li2"><strong>Master of Medicine (Clinical/Surgical Oncology):</strong> Fudan University, Shanghai, China (2001).</li>
                         <li data-key="edu_li3"><strong>MBBS:</strong> Shanghai Medical University, China (1998).</li>
+                    </ul>
+
+                    <h3 style="margin-bottom:15px; color:var(--primary);" data-key="fel_title">International Fellowships</h3>
+                    <ul class="data-list">
+                        <li data-key="fel_li1"><strong>Fellowship in Colorectal Surgery:</strong> Royal College of Surgeons of Edinburgh (UK) (2010–2011).</li>
+                        <li data-key="fel_li2"><strong>Saudavar Fellowship in Surgical Oncology:</strong> Memorial Sloan Kettering Cancer Center (MSKCC), New York (2006).</li>
+                        <li data-key="fel_li3"><strong>UICC ICRETT Fellowship:</strong> Sentinel Lymph Node Biopsy, H. Lee Moffitt Cancer Center, Florida (2003).</li>
                     </ul>
                 </div>
             </section>
@@ -459,6 +466,60 @@
                 clinic_addr: "Hospital Road, Bharatpur-10, Chitwan",
                 clinic_call: "Call for Appointment"
             },
+            ne: {
+                name: "डा. निर्मल लामिछाने",
+                title: "वरिष्ठ कन्सल्टेन्ट सर्जन",
+                nav_bio: "जीवनी", nav_lead: "नेतृत्व", nav_exp: "विशेषज्ञता", nav_contact: "सम्पर्क",
+                hero_title: "व्यावसायिक जीवनी सारांश",
+                hero_desc: "डा. निर्मल लामिछाने सर्जिकल अन्कोलोजी र युरोलोजिकल क्यान्सर (Onco-Urology) मा विशेषज्ञता हासिल गरेका प्रतिष्ठित वरिष्ठ कन्सल्टेन्ट सर्जन हुनुहुन्छ।",
+                sec_exec: "कार्यकारी सारांश",
+                bio_p1: "डा. निर्मल लामिछाने सर्जिकल अन्कोलोजी र युरोलोजिकल क्यान्सर (Onco-Urology) मा विशेषज्ञता हासिल गरेका प्रतिष्ठित वरिष्ठ कन्सल्टेन्ट सर्जन हुनुहुन्छ।",
+                bio_p2: "दुई दशकभन्दा बढी शल्यक्रिया अनुभवका साथ, डा. लामिछानेले काठमाडौं विश्वविद्यालयबाट युरोलोजीमा M.Ch र सांघाईको फुदान विश्वविद्यालयबाट क्लिनिकल/सर्जिकल अन्कोलोजीमा स्नातकोत्तर गर्नुभएको छ।",
+                bio_p3: "उहाँको अन्तर्राष्ट्रिय तालिम विस्तृत छ, जसमा न्यूयोर्कको मेमोरियल स्लोन केटरिङ क्यान्सर सेन्टर (MSKCC), फ्लोरिडाको एच. ली मोफिट क्यान्सर सेन्टर, र रोयल कलेज अफ सर्जन अफ एडिनबर्ग (UK) को कोलोरेक्टल सर्जरी फेलोसिप समावेश छन्।",
+                bio_p4: "उहाँको क्लिनिकल विशेषज्ञता जटिल पेल्भिक शल्यक्रिया, रेडिकल प्रोस्टेटेक्टोमी, सिस्टेक्टोमी, र reconstructive urology मा केन्द्रित छ, विशेष गरी 'Studer pouch neobladder reconstruction' मा।",
+                sec_lead: "नेतृत्व र प्रशासन",
+                lead_intro: "डा. लामिछानेले BPKMCH मा महत्वपूर्ण शासकीय भूमिकाहरू निर्वाह गर्नुभएको छ:",
+                lead_1_role: "अध्यक्ष, सञ्चालक समिति", lead_1_date: "२०७७ – हाल", lead_1_loc: "बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH), चितवन",
+                lead_2_role: "उप-निर्देशक", lead_2_date: "२०७४ – २०७७", lead_2_loc: "बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH)",
+                lead_3_title: "समिति नेतृत्व", lead_3_li1: "<strong>वैज्ञानिक समिति अध्यक्ष:</strong> प्रथम राष्ट्रिय अन्कोलोजी सम्मेलन (२००४)।",
+                lead_3_li2: "<strong>संयोजक:</strong> वार्षिक प्रतिवेदन प्रकाशन समिति (२००५–२००८)।",
+                sec_exp: "क्लिनिकल विशेषज्ञता",
+                exp_li1: "<strong>जेनिटो-युरिनरी ट्र्याक्ट ट्युमर:</strong> मुत्राशय, प्रोस्टेट र मिर्गौलाको क्यान्सरमा विशेषज्ञ।",
+                exp_li2: "<strong>शल्यक्रिया प्रक्रियाहरू:</strong> TURP, TURBT, रेडिकल प्रोस्टेटेक्टोमी, सिस्टेक्टोमी।",
+                exp_li3: "<strong>पुनर्निर्माण:</strong> Studer pouch neobladder reconstruction मा विशेषज्ञ।",
+                exp_li4: "<strong>जनरल अन्कोलोजी सर्जरी:</strong> मास्टेक्टोमी, कोलेक्टोमी, पेनेक्टोमी, र ग्रोइन डिसेक्सन।",
+                sec_cred: "प्रमाणपत्र र तालिम",
+                edu_title: "शिक्षा",
+                edu_li1: "<strong>M.Ch (युरोलोजी):</strong> काठमाडौं विश्वविद्यालय, नेपाल (२०१६)।",
+                edu_li2: "<strong>Master of Medicine (अन्कोलोजी):</strong> फुदान विश्वविद्यालय, सांघाई, चीन (२००१)।",
+                edu_li3: "<strong>MBBS:</strong> सांघाई मेडिकल युनिभर्सिटी, चीन (१९९८)।",
+                fel_title: "अन्तर्राष्ट्रिय फेलोसिप",
+                fel_li1: "<strong>कोलोरेक्टल सर्जरीमा फेलोसिप:</strong> रोयल कलेज अफ सर्जन, एडिनबर्ग (UK) (२०१०–२०११)।",
+                fel_li2: "<strong>सर्जिकल अन्कोलोजीमा सौदावर फेलोसिप:</strong> MSKCC, न्यूयोर्क (२००६)।",
+                fel_li3: "<strong>UICC ICRETT फेलोसिप:</strong> सेन्टिनेल लिम्फ नोड बायोप्सी, फ्लोरिडा (२००३)।",
+                sec_res: "अनुसन्धान र प्रकाशन",
+                res_intro: "डा. लामिछाने ३० भन्दा बढी पियर-रिभ्युड प्रकाशनहरूका साथ एक सक्रिय अनुसन्धानकर्ता हुनुहुन्छ।",
+                res_li1: "<strong>लिंगको क्यान्सर:</strong> लिम्फ नोड डिसेक्सन र शल्यक्रिया व्यवस्थापन।",
+                res_li2: "<strong>प्रोस्टेट क्यान्सर:</strong> रोबोट-असिस्टेड रेडिकल प्रोस्टेटेक्टोमी र बायोप्सी।",
+                res_li3: "<strong>मुत्राशय क्यान्सर:</strong> नियोब्लाडर र युरेथ्रोप्लास्टी।",
+                res_li4: "<strong>स्तन क्यान्सर:</strong> नेपाल र चीनमा सेन्टिनेल लिम्फ नोड बायोप्सीको अनुसन्धान।",
+                res_link: "गुगल स्कलरमा पूर्ण सूची हेर्नुहोस्",
+                sec_ask: "परामर्श",
+                ask_title: "डा. निर्मलसँग सोध्नुहोस्",
+                ask_desc: "के तपाइँ युरोलोजिकल वा क्यान्सर सम्बन्धी समस्याबारे सोध्न चाहनुहुन्छ?",
+                ask_btn: "ह्वाट्सएप मार्फत पठाउनुहोस्",
+                ph_name: "तपाईंको नाम", ph_msg: "तपाईंको समस्या संक्षेपमा लेख्नुहोस्...",
+                sb_reg: "दर्ता प्रमाणपत्र",
+                reg_nmc: "<strong>नेपाल मेडिकल काउन्सिल (NMC):</strong> ३२६१",
+                reg_gmc: "<strong>जनरल मेडिकल काउन्सिल (GMC), UK:</strong> ७०५९७५२",
+                sb_aff: "सम्बद्धता", aff_int: "अन्तर्राष्ट्रिय:", aff_nat: "राष्ट्रिय:",
+                sb_lang: "भाषाहरू", lang_desc: "नेपाली, अंग्रेजी, चिनियाँ र हिन्दीमा धाराप्रवाह।",
+                footer_sub: "वरिष्ठ कन्सल्टेन्ट सर्जन | BPKMCH",
+                sb_clinic_title: "क्लिनिक अपोइन्टमेन्ट",
+                clinic_name: "नेशनल सिटी हस्पिटल (प्राइभेट)",
+                clinic_addr: "हस्पिटल रोड, भरतपुर-१०, चितवन",
+                clinic_call: "अपोइन्टमेन्टको लागि फोन गर्नुहोस्"
+            },
             zh: {
                 name: "尼尔马尔·拉米查内 医生",
                 title: "高级顾问外科医生",
@@ -553,4 +614,3 @@
     </script>
 </body>
 </html>
-
