--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                     <h3 style="margin-bottom:15px; color:var(--primary);" data-key="edu_title">Education</h3>
                     <ul class="data-list" style="margin-bottom: 30px;">
                         <li data-key="edu_li1"><strong>M.Ch (Magister Chirurgiae) in Urology:</strong> Kathmandu University, Nepal (2016).</li>
-                        <li data-key="edu_li2"><strong>Master of Medicine (Clinical/Surgical Oncology):</strong> Fudan University, Shanghai, China (2001).</li>
+                        <li data-key="edu_li2"><strong>M.S.Surgical Oncology:</strong> Fudan University, Shanghai, China (2001).</li>
                         <li data-key="edu_li3"><strong>MBBS:</strong> Shanghai Medical University, China (1998).</li>
                     </ul>
 
@@ -614,3 +614,4 @@
     </script>
 </body>
 </html>
+
