--- a/index.html
+++ b/index.html
@@ -236,10 +236,11 @@
                         <small style="color: #777; font-size: 0.8rem; display:block;" data-key="name">Dr. Nirmal Lamichhane</small>
                     </div>
 
-                    <p style="margin-bottom: 15px;" data-key="bio_p1">Dr. Nirmal Lamichhane is a distinguished Senior Consultant Surgeon specializing in Surgical Oncology with a sub-specialization in Urological Cancers (Onco-Urology).</p>
-                    <p style="margin-bottom: 15px;" data-key="bio_p2">With over two decades of surgical experience, Dr. Lamichhane holds an M.Ch in Urology from Kathmandu University and a Master of Medicine in Clinical/Surgical Oncology from Fudan University, Shanghai.</p>
-                    <p style="margin-bottom: 15px;" data-key="bio_p3">His international training is extensive, including prestigious fellowships at Memorial Sloan Kettering Cancer Center (MSKCC) in New York, the H. Lee Moffitt Cancer Center in Florida, and a Fellowship in Colorectal Surgery sponsored by the Royal College of Surgeons of Edinburgh (UK).</p>
-                    <p data-key="bio_p4">His clinical expertise focuses on complex pelvic surgeries, radical prostatectomies, cystectomies, and reconstructive urology, with a special interest in Studer pouch neobladder reconstruction.</p>
+                    <p style="margin-bottom: 15px;" data-key="bio_p1">Dr. Nirmal Lamichhane stands as a preeminent figure in the field of surgical oncology in Nepal, currently serving as a Senior Consultant Surgeon at the B. P. Koirala Memorial Cancer Hospital (BPKMCH). With a dedicated sub-specialization in Urological Cancers (Onco-Urology), he has committed his career to the diagnosis, advanced surgical management, and comprehensive care of patients battling complex malignancies.</p>
+                    <p style="margin-bottom: 15px;" data-key="bio_p2">Possessing over two decades of robust surgical experience, Dr. Lamichhane combines academic excellence with clinical precision. He obtained his Master of Surgery (M.Ch) in Urology from Kathmandu University, following a rigorous M.S. Surgical Oncology from the prestigious Fudan University in Shanghai, China. This unique educational background provides him with a comprehensive dual-perspective on general oncology and specialized urologic surgery.</p>
+                    <p style="margin-bottom: 15px;" data-key="bio_p3">His clinical acumen is further refined by extensive international training at some of the world's leading cancer centers. He was awarded the Saudavar Fellowship in Surgical Oncology at the renowned Memorial Sloan Kettering Cancer Center (MSKCC) in New York and the UICC ICRETT Fellowship at the H. Lee Moffitt Cancer Center in Florida. Additionally, he holds a Fellowship in Colorectal Surgery sponsored by the Royal College of Surgeons of Edinburgh (UK), reflecting his versatility in complex abdominal procedures.</p>
+                    <p style="margin-bottom: 15px;" data-key="bio_p4">Dr. Lamichhane’s expertise encompasses the full spectrum of genito-urinary tract tumors, including adrenal, renal, ureteric, bladder, prostate, and penile cancers. He is a pioneer in performing radical prostatectomies and radical cystectomies with intracorporeal diversions. He holds a particular authority in reconstructive urology, specifically the "Studer pouch neobladder reconstruction," a sophisticated procedure allowing bladder cancer patients to retain normal urinary function.</p>
+                    <p data-key="bio_p5">Beyond urology, Dr. Lamichhane retains deep proficiency in general oncological interventions, including mastectomies, colorectal surgeries, and complex lymph node dissections. As a former Chairman of the Board of Directors at BPKMCH, he also brings strategic leadership to the healthcare sector, driving advancements in cancer care infrastructure and patient advocacy in Nepal.</p>
                 </div>
             </section>
 
@@ -291,7 +292,7 @@
                     <h3 style="margin-bottom:15px; color:var(--primary);" data-key="edu_title">Education</h3>
                     <ul class="data-list" style="margin-bottom: 30px;">
                         <li data-key="edu_li1"><strong>M.Ch (Magister Chirurgiae) in Urology:</strong> Kathmandu University, Nepal (2016).</li>
-                        <li data-key="edu_li2"><strong>M.S.Surgical Oncology:</strong> Fudan University, Shanghai, China (2001).</li>
+                        <li data-key="edu_li2"><strong>M.S. Surgical Oncology:</strong> Fudan University, Shanghai, China (2001).</li>
                         <li data-key="edu_li3"><strong>MBBS:</strong> Shanghai Medical University, China (1998).</li>
                     </ul>
 
@@ -419,10 +420,11 @@
                 hero_title: "Professional Biographical Abstract",
                 hero_desc: "Dr. Nirmal Lamichhane is a distinguished Senior Consultant Surgeon specializing in Surgical Oncology with a sub-specialization in Urological Cancers (Onco-Urology).",
                 sec_exec: "Executive Summary",
-                bio_p1: "Dr. Nirmal Lamichhane is a distinguished Senior Consultant Surgeon specializing in Surgical Oncology with a sub-specialization in Urological Cancers (Onco-Urology).",
-                bio_p2: "With over two decades of surgical experience, Dr. Lamichhane holds an M.Ch in Urology from Kathmandu University and a Master of Medicine in Clinical/Surgical Oncology from Fudan University, Shanghai.",
-                bio_p3: "His international training is extensive, including prestigious fellowships at Memorial Sloan Kettering Cancer Center (MSKCC) in New York, the H. Lee Moffitt Cancer Center in Florida, and a Fellowship in Colorectal Surgery sponsored by the Royal College of Surgeons of Edinburgh (UK).",
-                bio_p4: "His clinical expertise focuses on complex pelvic surgeries, radical prostatectomies, cystectomies, and reconstructive urology, with a special interest in Studer pouch neobladder reconstruction.",
+                bio_p1: "Dr. Nirmal Lamichhane stands as a preeminent figure in the field of surgical oncology in Nepal, currently serving as a Senior Consultant Surgeon at the B. P. Koirala Memorial Cancer Hospital (BPKMCH). With a dedicated sub-specialization in Urological Cancers (Onco-Urology), he has committed his career to the diagnosis, advanced surgical management, and comprehensive care of patients battling complex malignancies.",
+                bio_p2: "Possessing over two decades of robust surgical experience, Dr. Lamichhane combines academic excellence with clinical precision. He obtained his Master of Surgery (M.Ch) in Urology from Kathmandu University, following a rigorous M.S. Surgical Oncology from the prestigious Fudan University in Shanghai, China. This unique educational background provides him with a comprehensive dual-perspective on general oncology and specialized urologic surgery.",
+                bio_p3: "His clinical acumen is further refined by extensive international training at some of the world's leading cancer centers. He was awarded the Saudavar Fellowship in Surgical Oncology at the renowned Memorial Sloan Kettering Cancer Center (MSKCC) in New York and the UICC ICRETT Fellowship at the H. Lee Moffitt Cancer Center in Florida. Additionally, he holds a Fellowship in Colorectal Surgery sponsored by the Royal College of Surgeons of Edinburgh (UK), reflecting his versatility in complex abdominal procedures.",
+                bio_p4: "Dr. Lamichhane’s expertise encompasses the full spectrum of genito-urinary tract tumors, including adrenal, renal, ureteric, bladder, prostate, and penile cancers. He is a pioneer in performing radical prostatectomies and radical cystectomies with intracorporeal diversions. He holds a particular authority in reconstructive urology, specifically the \"Studer pouch neobladder reconstruction,\" a sophisticated procedure allowing bladder cancer patients to retain normal urinary function.",
+                bio_p5: "Beyond urology, Dr. Lamichhane retains deep proficiency in general oncological interventions, including mastectomies, colorectal surgeries, and complex lymph node dissections. As a former Chairman of the Board of Directors at BPKMCH, he also brings strategic leadership to the healthcare sector, driving advancements in cancer care infrastructure and patient advocacy in Nepal.",
                 sec_lead: "Leadership & Administration",
                 lead_intro: "Dr. Lamichhane has held pivotal governance roles at BPKMCH, shaping the institution's strategic direction:",
                 lead_1_role: "Chairman, Board of Directors", lead_1_date: "2020 – Present", lead_1_loc: "B. P. Koirala Memorial Cancer Hospital (BPKMCH), Chitwan",
@@ -437,7 +439,7 @@
                 sec_cred: "Credentials & Training",
                 edu_title: "Education",
                 edu_li1: "<strong>M.Ch (Magister Chirurgiae) in Urology:</strong> Kathmandu University, Nepal (2016).",
-                edu_li2: "<strong>Master of Medicine (Clinical/Surgical Oncology):</strong> Fudan University, Shanghai, China (2001).",
+                edu_li2: "<strong>M.S. Surgical Oncology:</strong> Fudan University, Shanghai, China (2001).",
                 edu_li3: "<strong>MBBS:</strong> Shanghai Medical University, China (1998).",
                 fel_title: "International Fellowships",
                 fel_li1: "<strong>Fellowship in Colorectal Surgery:</strong> Royal College of Surgeons of Edinburgh (UK) (2010–2011).",
@@ -473,10 +475,11 @@
                 hero_title: "व्यावसायिक जीवनी सारांश",
                 hero_desc: "डा. निर्मल लामिछाने सर्जिकल अन्कोलोजी र युरोलोजिकल क्यान्सर (Onco-Urology) मा विशेषज्ञता हासिल गरेका प्रतिष्ठित वरिष्ठ कन्सल्टेन्ट सर्जन हुनुहुन्छ।",
                 sec_exec: "कार्यकारी सारांश",
-                bio_p1: "डा. निर्मल लामिछाने सर्जिकल अन्कोलोजी र युरोलोजिकल क्यान्सर (Onco-Urology) मा विशेषज्ञता हासिल गरेका प्रतिष्ठित वरिष्ठ कन्सल्टेन्ट सर्जन हुनुहुन्छ।",
-                bio_p2: "दुई दशकभन्दा बढी शल्यक्रिया अनुभवका साथ, डा. लामिछानेले काठमाडौं विश्वविद्यालयबाट युरोलोजीमा M.Ch र सांघाईको फुदान विश्वविद्यालयबाट क्लिनिकल/सर्जिकल अन्कोलोजीमा स्नातकोत्तर गर्नुभएको छ।",
-                bio_p3: "उहाँको अन्तर्राष्ट्रिय तालिम विस्तृत छ, जसमा न्यूयोर्कको मेमोरियल स्लोन केटरिङ क्यान्सर सेन्टर (MSKCC), फ्लोरिडाको एच. ली मोफिट क्यान्सर सेन्टर, र रोयल कलेज अफ सर्जन अफ एडिनबर्ग (UK) को कोलोरेक्टल सर्जरी फेलोसिप समावेश छन्।",
-                bio_p4: "उहाँको क्लिनिकल विशेषज्ञता जटिल पेल्भिक शल्यक्रिया, रेडिकल प्रोस्टेटेक्टोमी, सिस्टेक्टोमी, र reconstructive urology मा केन्द्रित छ, विशेष गरी 'Studer pouch neobladder reconstruction' मा।",
+                bio_p1: "डा. निर्मल लामिछाने नेपालको सर्जिकल अन्कोलोजी क्षेत्रका एक प्रतिष्ठित व्यक्तित्व हुनुहुन्छ। हाल उहाँ बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH) मा वरिष्ठ कन्सल्टेन्ट सर्जनको रूपमा सेवारत हुनुहुन्छ। उहाँले आफ्नो जीवन जटिल क्यान्सर रोगको निदान र उपचारमा समर्पित गर्नुभएको छ।",
+                bio_p2: "दुई दशकभन्दा बढी शल्यक्रिया अनुभवका साथ, डा. लामिछानेले काठमाडौं विश्वविद्यालयबाट युरोलोजीमा M.Ch र सांघाईको फुदान विश्वविद्यालयबाट M.S. Surgical Oncology (सर्जिकल अन्कोलोजीमा स्नातकोत्तर) गर्नुभएको छ। यस शैक्षिक पृष्ठभूमिले उहाँलाई सामान्य अन्कोलोजी र विशेष युरोलोजिक शल्यक्रियामा दोहोरो दृष्टिकोण प्रदान गर्दछ।",
+                bio_p3: "उहाँको अन्तर्राष्ट्रिय तालिम विस्तृत छ, जसमा न्यूयोर्कको मेमोरियल स्लोन केटरिङ क्यान्सर सेन्टर (MSKCC) मा सर्जिकल अन्कोलोजीमा सौदावर फेलोसिप, फ्लोरिडाको एच. ली मोफिट क्यान्सर सेन्टरमा UICC ICRETT फेलोसिप, र रोयल कलेज अफ सर्जन अफ एडिनबर्ग (UK) द्वारा प्रायोजित कोलोरेक्टल सर्जरीमा फेलोसिप समावेश छन्।",
+                bio_p4: "उहाँको विशेषज्ञताले एड्रेनल, मिर्गौला, मुत्राशय, प्रोस्टेट र लिंगको क्यान्सर सहित जेनिटो-युरिनरी ट्र्याक्ट ट्युमरहरूको पूर्ण दायरा समेट्छ। उहाँ रेडिकल प्रोस्टेटेक्टोमी र रेडिकल सिस्टेक्टोमी जस्ता जटिल शल्यक्रियामा अग्रणी हुनुहुन्छ। साथै, उहाँ 'Studer pouch neobladder reconstruction' जस्तो जटिल शल्यक्रियामा विशेष दक्षता राख्नुहुन्छ, जसले बिरामीलाई सामान्य रूपमा पिसाब फेर्न सक्षम बनाउँछ।",
+                bio_p5: "युरोलोजी बाहेक, डा. लामिछाने मास्टेक्टोमी र कोलोरेक्टल शल्यक्रियामा पनि दक्ष हुनुहुन्छ। BPKMCH को सञ्चालक समितिका पूर्व अध्यक्षको रूपमा, उहाँले नेपालमा क्यान्सर उपचारको पूर्वाधार विकासमा रणनीतिक नेतृत्व प्रदान गर्नुभएको छ।",
                 sec_lead: "नेतृत्व र प्रशासन",
                 lead_intro: "डा. लामिछानेले BPKMCH मा महत्वपूर्ण शासकीय भूमिकाहरू निर्वाह गर्नुभएको छ:",
                 lead_1_role: "अध्यक्ष, सञ्चालक समिति", lead_1_date: "२०७७ – हाल", lead_1_loc: "बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH), चितवन",
@@ -491,7 +494,7 @@
                 sec_cred: "प्रमाणपत्र र तालिम",
                 edu_title: "शिक्षा",
                 edu_li1: "<strong>M.Ch (युरोलोजी):</strong> काठमाडौं विश्वविद्यालय, नेपाल (२०१६)।",
-                edu_li2: "<strong>Master of Medicine (अन्कोलोजी):</strong> फुदान विश्वविद्यालय, सांघाई, चीन (२००१)।",
+                edu_li2: "<strong>M.S. Surgical Oncology:</strong> फुदान विश्वविद्यालय, सांघाई, चीन (२००१)।",
                 edu_li3: "<strong>MBBS:</strong> सांघाई मेडिकल युनिभर्सिटी, चीन (१९९८)।",
                 fel_title: "अन्तर्राष्ट्रिय फेलोसिप",
                 fel_li1: "<strong>कोलोरेक्टल सर्जरीमा फेलोसिप:</strong> रोयल कलेज अफ सर्जन, एडिनबर्ग (UK) (२०१०–२०११)।",
@@ -527,10 +530,11 @@
                 hero_title: "专业简历摘要",
                 hero_desc: "Nirmal Lamichhane 博士是一位杰出的高级顾问外科医生，专门从事肿瘤外科，并在泌尿系统癌症（肿瘤泌尿科）方面拥有亚专科特长。",
                 sec_exec: "执行摘要",
-                bio_p1: "Nirmal Lamichhane 博士是一位杰出的高级顾问外科医生，专门从事肿瘤外科，并在泌尿系统癌症（肿瘤泌尿科）方面拥有亚专科特长。",
-                bio_p2: "Lamichhane 博士拥有二十多年的手术经验，持有加德满都大学泌尿外科 M.Ch 学位和上海复旦大学临床/肿瘤外科医学硕士学位。",
-                bio_p3: "他接受过广泛的国际培训，包括在纽约纪念斯隆-凯特琳癌症中心 (MSKCC) 和佛罗里达州莫菲特癌症中心的著名奖学金项目，以及英国爱丁堡皇家外科医学院赞助的结直肠外科奖学金。",
-                bio_p4: "他的临床专长集中在复杂的盆腔手术、根治性前列腺切除术、膀胱切除术和重建泌尿外科，特别是 Studer 原位新膀胱重建术。",
+                bio_p1: "Nirmal Lamichhane 博士是尼泊尔肿瘤外科领域的杰出人物，目前担任 B. P. Koirala 纪念癌症医院 (BPKMCH) 的高级顾问外科医生。他致力于复杂恶性肿瘤的诊断、先进的手术管理和综合护理。",
+                bio_p2: "Lamichhane 博士拥有二十多年的手术经验，将学术卓越与临床精准相结合。他在中国上海著名的复旦大学获得了M.S. Surgical Oncology (肿瘤外科医学硕士) 学位，随后在加德满都大学获得了泌尿外科 M.Ch 学位。这种独特的教育背景为他提供了普通肿瘤学和专业泌尿外科的双重视角。",
+                bio_p3: "他在世界领先的癌症中心接受了广泛的国际培训，进一步完善了他的临床敏锐度。他获得了纽约著名的纪念斯隆-凯特琳癌症中心 (MSKCC) 的 Saudavar 肿瘤外科奖学金，以及佛罗里达州 H. Lee Moffitt 癌症中心的 UICC ICRETT 奖学金。此外，他还持有英国爱丁堡皇家外科医学院赞助的结直肠外科奖学金。",
+                bio_p4: "Lamichhane 博士的专长涵盖了泌尿生殖道肿瘤的全谱系，包括肾上腺、肾脏、输尿管、膀胱、前列腺和阴茎癌。他是进行根治性前列腺切除术和体内改道根治性膀胱切除术的先驱。他在重建泌尿外科方面拥有特别的权威，特别是“Studer 原位新膀胱重建术”，这是一种允许膀胱癌患者保留正常排尿功能的复杂手术。",
+                bio_p5: "除了泌尿科，Lamichhane 博士在普通肿瘤干预方面也保持着深厚的造诣，包括乳房切除术和结直肠手术。作为 BPKMCH 的前董事会主席，他还为医疗保健行业带来了战略领导力，推动了尼泊尔癌症护理基础设施的进步。",
                 sec_lead: "领导与行政",
                 lead_intro: "Lamichhane 博士在 BPKMCH 担任过关键的治理职务，塑造了该机构的战略方向：",
                 lead_1_role: "董事会主席", lead_1_date: "2020 – 至今", lead_1_loc: "B. P. Koirala 纪念癌症医院 (BPKMCH), 奇特旺",
@@ -545,7 +549,7 @@
                 sec_cred: "资历与培训",
                 edu_title: "教育背景",
                 edu_li1: "<strong>M.Ch (泌尿外科):</strong> 尼泊尔加德满都大学 (2016)。",
-                edu_li2: "<strong>医学硕士 (临床/肿瘤外科):</strong> 中国上海复旦大学 (2001)。",
+                edu_li2: "<strong>M.S. Surgical Oncology:</strong> 中国上海复旦大学 (2001)。",
                 edu_li3: "<strong>临床医学学士 (MBBS):</strong> 中国上海医科大学 (1998)。",
                 fel_title: "国际进修",
                 fel_li1: "<strong>结直肠外科奖学金：</strong> 英国爱丁堡皇家外科医学院 (2010–2011)。",
@@ -614,4 +618,3 @@
     </script>
 </body>
 </html>
-
