--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Nirmal Lamichhane | Senior Consultant Surgeon</title>
-    <meta name="description" content="Professional Portfolio of Dr. Nirmal Lamichhane, Senior Consultant Surgeon specializing in Onco-Urology.">
+    <meta name="description" content="Professional Portfolio of Dr. Nirmal Lamichhane, Senior Consultant Surgeon specializing in Uro-Oncology.">
     
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@500;600;700&family=Mukta:wght@400;600;700&family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -618,3 +618,4 @@
     </script>
 </body>
 </html>
+
