--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
             en: {
                 name: "Dr. Nirmal Lamichhane",
                 title: "Senior Consultant Surgeon",
-                nav_bio: "Bio", nav_lead: "Leadership", nav_exp: "Expertise", nav_contact: "Contact",
+                nav_bio: "Biography", nav_lead: "Leadership", nav_exp: "Expertise", nav_contact: "Contact",
                 hero_title: "Professional Biographical Abstract",
                 hero_desc: "Dr. Nirmal Lamichhane is a distinguished Senior Consultant Surgeon specializing in Surgical Oncology with a sub-specialization in Urological Cancers (Onco-Urology).",
                 sec_exec: "Executive Summary",
@@ -618,4 +618,5 @@
     </script>
 </body>
 </html>
+
 
