--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 title: "वरिष्ठ कन्सल्टेन्ट सर्जन",
                 nav_bio: "जीवनी", nav_lead: "नेतृत्व", nav_exp: "विशेषज्ञता", nav_contact: "सम्पर्क",
                 hero_title: "व्यावसायिक जीवनी सारांश",
-                hero_desc: "डा. निर्मल लामिछाने सर्जिकल अन्कोलोजी र युरोलोजिकल क्यान्सर (Onco-Urology) मा विशेषज्ञता हासिल गरेका प्रतिष्ठित वरिष्ठ कन्सल्टेन्ट सर्जन हुनुहुन्छ।",
+                hero_desc: "डा. निर्मल लामिछाने सर्जिकल अन्कोलोजी र युरोलोजिकल क्यान्सर (Uro-oncology) मा विशेषज्ञता हासिल गरेका प्रतिष्ठित वरिष्ठ कन्सल्टेन्ट सर्जन हुनुहुन्छ।",
                 sec_exec: "कार्यकारी सारांश",
                 bio_p1: "डा. निर्मल लामिछाने नेपालको सर्जिकल अन्कोलोजी क्षेत्रका एक प्रतिष्ठित व्यक्तित्व हुनुहुन्छ। हाल उहाँ बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH) मा वरिष्ठ कन्सल्टेन्ट सर्जनको रूपमा सेवारत हुनुहुन्छ। उहाँले आफ्नो जीवन जटिल क्यान्सर रोगको निदान र उपचारमा समर्पित गर्नुभएको छ।",
                 bio_p2: "दुई दशकभन्दा बढी शल्यक्रिया अनुभवका साथ, डा. लामिछानेले काठमाडौं विश्वविद्यालयबाट युरोलोजीमा M.Ch र सांघाईको फुदान विश्वविद्यालयबाट M.S. Surgical Oncology (सर्जिकल अन्कोलोजीमा स्नातकोत्तर) गर्नुभएको छ। यस शैक्षिक पृष्ठभूमिले उहाँलाई सामान्य अन्कोलोजी र विशेष युरोलोजिक शल्यक्रियामा दोहोरो दृष्टिकोण प्रदान गर्दछ।",
@@ -482,7 +482,7 @@
                 bio_p5: "युरोलोजी बाहेक, डा. लामिछाने मास्टेक्टोमी र कोलोरेक्टल शल्यक्रियामा पनि दक्ष हुनुहुन्छ। BPKMCH को सञ्चालक समितिका पूर्व अध्यक्षको रूपमा, उहाँले नेपालमा क्यान्सर उपचारको पूर्वाधार विकासमा रणनीतिक नेतृत्व प्रदान गर्नुभएको छ।",
                 sec_lead: "नेतृत्व र प्रशासन",
                 lead_intro: "डा. लामिछानेले BPKMCH मा महत्वपूर्ण शासकीय भूमिकाहरू निर्वाह गर्नुभएको छ:",
-                lead_1_role: "अध्यक्ष, सञ्चालक समिति", lead_1_date: "२०७७ – हाल", lead_1_loc: "बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH), चितवन",
+                lead_1_role: "अध्यक्ष, सञ्चालक समिति", lead_1_date: "२०७७ –२०८०", lead_1_loc: "बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH), चितवन",
                 lead_2_role: "उप-निर्देशक", lead_2_date: "२०७४ – २०७७", lead_2_loc: "बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH)",
                 lead_3_title: "समिति नेतृत्व", lead_3_li1: "<strong>वैज्ञानिक समिति अध्यक्ष:</strong> प्रथम राष्ट्रिय अन्कोलोजी सम्मेलन (२००४)।",
                 lead_3_li2: "<strong>संयोजक:</strong> वार्षिक प्रतिवेदन प्रकाशन समिति (२००५–२००८)।",
@@ -537,7 +537,7 @@
                 bio_p5: "除了泌尿科，Lamichhane 博士在普通肿瘤干预方面也保持着深厚的造诣，包括乳房切除术和结直肠手术。作为 BPKMCH 的前董事会主席，他还为医疗保健行业带来了战略领导力，推动了尼泊尔癌症护理基础设施的进步。",
                 sec_lead: "领导与行政",
                 lead_intro: "Lamichhane 博士在 BPKMCH 担任过关键的治理职务，塑造了该机构的战略方向：",
-                lead_1_role: "董事会主席", lead_1_date: "2020 – 至今", lead_1_loc: "B. P. Koirala 纪念癌症医院 (BPKMCH), 奇特旺",
+                lead_1_role: "董事会主席", lead_1_date: "2020 –2023 至今", lead_1_loc: "B. P. Koirala 纪念癌症医院 (BPKMCH), 奇特旺",
                 lead_2_role: "副院长", lead_2_date: "2018 – 2020", lead_2_loc: "B. P. Koirala 纪念癌症医院 (BPKMCH)",
                 lead_3_title: "委员会领导", lead_3_li1: "<strong>科学委员会主席：</strong> 首届全国肿瘤学会议 (2004)。",
                 lead_3_li2: "<strong>协调员：</strong> 年度报告出版委员会 (2005–2008)。",
@@ -618,5 +618,6 @@
     </script>
 </body>
 </html>
+
 
 
