--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 title: "Senior Consultant Surgeon",
                 nav_bio: "Biography", nav_lead: "Leadership", nav_exp: "Expertise", nav_contact: "Contact",
                 hero_title: "Professional Biographical Abstract",
-                hero_desc: "Dr. Nirmal Lamichhane is a distinguished Senior Consultant Surgeon specializing in Surgical Oncology with a sub-specialization in Urological Cancers (Onco-Urology).",
+                hero_desc: "Dr. Nirmal Lamichhane is a distinguished Senior Consultant Surgeon specializing in Surgical Oncology with a sub-specialization in Urological Cancers (Uro-Oncology).",
                 sec_exec: "Executive Summary",
                 bio_p1: "Dr. Nirmal Lamichhane stands as a preeminent figure in the field of surgical oncology in Nepal, currently serving as a Senior Consultant Surgeon at the B. P. Koirala Memorial Cancer Hospital (BPKMCH). With a dedicated sub-specialization in Urological Cancers (Onco-Urology), he has committed his career to the diagnosis, advanced surgical management, and comprehensive care of patients battling complex malignancies.",
                 bio_p2: "Possessing over two decades of robust surgical experience, Dr. Lamichhane combines academic excellence with clinical precision. He obtained his Master of Surgery (M.Ch) in Urology from Kathmandu University, following a rigorous M.S. Surgical Oncology from the prestigious Fudan University in Shanghai, China. This unique educational background provides him with a comprehensive dual-perspective on general oncology and specialized urologic surgery.",
@@ -618,6 +618,7 @@
     </script>
 </body>
 </html>
+
 
 
 
