--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="hero-text">
                 <h2 data-key="hero_title">Professional Biographical Abstract</h2>
                 <p data-key="hero_desc">
-                    Dr. Nirmal Lamichhane is a distinguished Senior Consultant Surgeon specializing in Surgical Oncology with a sub-specialization in Urological Cancers (Onco-Urology).
+                    Dr. Nirmal Lamichhane is a distinguished Senior Consultant Surgeon specializing in Surgical Oncology with a sub-specialization in Urological Cancers (Uro-Oncology).
                 </p>
                 <div class="social-box" style="margin-top: 25px;">
                     <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
@@ -618,6 +618,7 @@
     </script>
 </body>
 </html>
+
 
 
 
