--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             
             <div class="nav-right">
                 <nav class="nav-menu">
-                    <a href="#biography" data-key="nav_bio">Bio</a>
+                    <a href="#biography" data-key="nav_bio">Biography</a>
                     <a href="#leadership" data-key="nav_lead">Leadership</a>
                     <a href="#expertise" data-key="nav_exp">Expertise</a>
                     <a href="#contact" data-key="nav_contact">Contact</a>
@@ -618,6 +618,7 @@
     </script>
 </body>
 </html>
+
 
 
 
