--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                 <div class="header-socials">
                     <a href="#" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="mailto:info@drnirmal.com" title="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:nirmal.lamichhane@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
@@ -618,6 +618,7 @@
     </script>
 </body>
 </html>
+
 
 
 
