--- a/index.html
+++ b/index.html
@@ -193,6 +193,17 @@
             font-style: normal;
         }
 
+        /* --- HISTORY BOX STYLE --- */
+        .hist-item {
+            margin-bottom: 12px;
+            font-size: 0.9rem;
+            border-bottom: 1px dashed #eee;
+            padding-bottom: 8px;
+            line-height: 1.4;
+        }
+        .hist-item:last-child { border-bottom: none; }
+        .hist-item strong { color: var(--primary); display: block; margin-bottom: 2px; }
+
         /* FOOTER GREEN BG AND RED TEXT */
         footer { 
             background: var(--footer-green); 
@@ -456,6 +467,7 @@
                     <span class="quote-author" data-key="q5_auth">- Desiderius Erasmus</span>
                 </div>
             </div>
+
             <div class="sidebar-box">
                 <h3 class="sidebar-title" data-key="sb_reg">Professional Registrations</h3>
                 <ul class="data-list">
@@ -482,7 +494,36 @@
                 <h3 class="sidebar-title" data-key="sb_lang">Languages</h3>
                 <p data-key="lang_desc">Fluent in Nepali, English, Chinese, and Hindi.</p>
             </div>
-        </aside>
+
+            <div class="sidebar-box">
+                <h3 class="sidebar-title" data-key="sb_history_title">A Brief History of Surgery</h3>
+                
+                <div class="hist-item">
+                    <strong data-key="hist_1_date">600 BC (Ancient):</strong>
+                    <span data-key="hist_1_text">Sushruta (the father of surgery) writes the Sushruta Samhita, describing plastic surgery.</span>
+                </div>
+
+                <div class="hist-item">
+                    <strong data-key="hist_2_date">Middle Ages:</strong>
+                    <span data-key="hist_2_text">Surgery was often performed by barber-surgeons, separate from academic medicine.</span>
+                </div>
+
+                <div class="hist-item">
+                    <strong data-key="hist_3_date">1846:</strong>
+                    <span data-key="hist_3_text">The first successful public demonstration of Ether anesthesia revolutionized pain control.</span>
+                </div>
+
+                <div class="hist-item">
+                    <strong data-key="hist_4_date">1867:</strong>
+                    <span data-key="hist_4_text">Joseph Lister introduces antiseptic methods, drastically reducing post-operative infections.</span>
+                </div>
+
+                <div class="hist-item">
+                    <strong data-key="hist_5_date">21st Century:</strong>
+                    <span data-key="hist_5_text">The era of minimally invasive laparoscopy and robotic-assisted surgery.</span>
+                </div>
+            </div>
+            </aside>
     </div>
 
     <footer>
@@ -559,14 +600,20 @@
                 soc_in: "LinkedIn Profile",
                 soc_tw: "Twitter / X",
                 soc_rg: "ResearchGate",
-
-                // QUOTES
                 sb_quotes_title: "Health Wisdom",
                 q1_text: "\"The greatest wealth is health.\"", q1_auth: "- Virgil",
                 q2_text: "\"Wherever the art of Medicine is loved, there is also a love of Humanity.\"", q2_auth: "- Hippocrates",
                 q3_text: "\"To keep the body in good health is a duty... otherwise we shall not be able to keep our mind strong and clear.\"", q3_auth: "- Buddha",
                 q4_text: "\"It is health that is real wealth and not pieces of gold and silver.\"", q4_auth: "- Mahatma Gandhi",
-                q5_text: "\"Prevention is better than cure.\"", q5_auth: "- Desiderius Erasmus"
+                q5_text: "\"Prevention is better than cure.\"", q5_auth: "- Desiderius Erasmus",
+                
+                // HISTORY OF SURGERY
+                sb_history_title: "A Brief History of Surgery",
+                hist_1_date: "600 BC (Ancient):", hist_1_text: "Sushruta (the father of surgery) writes the Sushruta Samhita, describing plastic surgery.",
+                hist_2_date: "Middle Ages:", hist_2_text: "Surgery was often performed by barber-surgeons, separate from academic medicine.",
+                hist_3_date: "1846:", hist_3_text: "The first successful public demonstration of Ether anesthesia revolutionized pain control.",
+                hist_4_date: "1867:", hist_4_text: "Joseph Lister introduces antiseptic methods, drastically reducing post-operative infections.",
+                hist_5_date: "21st Century:", hist_5_text: "The era of minimally invasive laparoscopy and robotic-assisted surgery."
             },
             ne: {
                 name: "डा. निर्मल लामिछाने",
@@ -628,14 +675,20 @@
                 soc_in: "लिंक्डइन प्रोफाइल",
                 soc_tw: "ट्विटर / X",
                 soc_rg: "रिसर्चगेट",
-
-                // QUOTES
                 sb_quotes_title: "स्वास्थ्य वाणी",
                 q1_text: "\"स्वास्थ्य नै सबैभन्दा ठूलो धन हो।\"", q1_auth: "- भर्जिल",
                 q2_text: "\"जहाँ चिकित्सा कलालाई प्रेम गरिन्छ, त्यहाँ मानवतालाई पनि प्रेम गरिन्छ।\"", q2_auth: "- हिप्पोक्रेट्स",
                 q3_text: "\"शरीरलाई स्वस्थ राख्नु हाम्रो कर्तव्य हो, नत्र हामी आफ्नो दिमागलाई बलियो र स्वच्छ राख्न सक्दैनौं।\"", q3_auth: "- गौतम बुद्ध",
                 q4_text: "\"वास्तविक धन स्वास्थ्य हो, सुन र चाँदीका टुक्राहरू होइनन्।\"", q4_auth: "- महात्मा गान्धी",
-                q5_text: "\"उपचार भन्दा रोकथाम राम्रो हो।\"", q5_auth: "- डेसिडेरियस इरास्मस"
+                q5_text: "\"उपचार भन्दा रोकथाम राम्रो हो।\"", q5_auth: "- डेसिडेरियस इरास्मस",
+
+                // HISTORY OF SURGERY
+                sb_history_title: "शल्यक्रियाको संक्षिप्त इतिहास",
+                hist_1_date: "६०० ई.पू. (प्राचीन):", hist_1_text: "सुश्रुत (शल्यक्रियाका पिता) ले सुश्रुत संहितामा प्लास्टिक सर्जरीको वर्णन गरे।",
+                hist_2_date: "मध्यकाल:", hist_2_text: "नाई-सर्जनहरूले शल्यक्रिया गर्थे, जुन शैक्षिक चिकित्सा भन्दा फरक थियो।",
+                hist_3_date: "सन् १८४६:", hist_3_text: "ईथर एनेस्थेसियाको सफल प्रदर्शनले पीडा नियन्त्रणमा क्रान्ति ल्यायो।",
+                hist_4_date: "सन् १८६७:", hist_4_text: "जोसेफ लिस्टरले एन्टिसेप्टिक विधिहरू ल्याए, जसले संक्रमणमा भारी कमी ल्यायो।",
+                hist_5_date: "२१ औं शताब्दी:", hist_5_text: "ल्याप्रोस्कोपी र रोबोटिक शल्यक्रियाको आधुनिक युग।"
             },
             zh: {
                 name: "尼尔马尔·拉米查内 医生",
@@ -697,14 +750,20 @@
                 soc_in: "LinkedIn 个人资料",
                 soc_tw: "Twitter / X",
                 soc_rg: "ResearchGate",
-
-                // QUOTES
                 sb_quotes_title: "健康格言",
                 q1_text: "\"健康是最大的财富。\"", q1_auth: "- 维吉尔",
                 q2_text: "\"医术之所在，即爱心之所在。\"", q2_auth: "- 希波克拉底",
                 q3_text: "\"保持身体健康是一种责任，否则我们将无法保持清醒和坚定的头脑。\"", q3_auth: "- 佛陀",
                 q4_text: "\"健康才是真正的财富，而不是金银。\"", q4_auth: "- 圣雄甘地",
-                q5_text: "\"预防胜于治疗。\"", q5_auth: "- 德西德里乌斯·伊拉斯谟"
+                q5_text: "\"预防胜于治疗。\"", q5_auth: "- 德西德里乌斯·伊拉斯谟",
+
+                // HISTORY OF SURGERY
+                sb_history_title: "外科手术简史",
+                hist_1_date: "公元前600年 (古代):", hist_1_text: "苏鲁塔 (外科之父) 撰写了《苏鲁塔本集》，描述了整形外科。",
+                hist_2_date: "中世纪:", hist_2_text: "手术通常由理发师兼外科医生进行，与学术医学分开。",
+                hist_3_date: "1846年:", hist_3_text: "乙醚麻醉的首次成功公开演示彻底改变了疼痛控制。",
+                hist_4_date: "1867年:", hist_4_text: "约瑟夫·李斯特引入了防腐方法，大幅减少了术后感染。",
+                hist_5_date: "21世纪:", hist_5_text: "微创腹腔镜和机器人辅助手术的时代。"
             }
         };
 
